--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -102,6 +102,7 @@
                         </span>
                     </a>
                 </div>
+
             </div>
             <div class="md:hidden">
                 <!-- Mobile menu button -->
@@ -127,14 +128,13 @@
         min-width: 8rem
     }
 </style>
-
 @section Scripts {
     <script>
         function updateCartCount() {
-            const cartItems = document.cookie.split('; ').find(row => row.startsWith('cartItems='));
-            if (cartItems) {
-                const cartItemsValue = JSON.parse(decodeURIComponent(cartItems.split('=')[1]));
-                const totalCount = cartItemsValue.reduce((total, item) => total + item.Quantity, 0);
+            const cartItemsCookie = document.cookie.split('; ').find(row => row.startsWith('cartItems='));
+            if (cartItemsCookie) {
+                const cartItemsValue = JSON.parse(decodeURIComponent(cartItemsCookie.split('=')[1]));
+                const totalCount = cartItemsValue.reduce((total, item) => total + (item.quantity || 0), 0); // Sử dụng 'quantity' nếu thuộc tính đúng là chữ thường
                 document.getElementById('cart-count').textContent = totalCount;
             } else {
                 document.getElementById('cart-count').textContent = 0;
