FE fix order index

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -46,7 +46,7 @@
                     @if (userRole != "Admin") 
                     {
                         <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                            <a href="/Order/@userIdString" class="block w-full">Order History</a>
+                                        <a href="/OrderHistory/@userIdString" class="block w-full">Order History</a>
                         </li>
                     }
                 }
