--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Index.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="video-content space-y-2 z-10">
         <h1 class="font-light text-6xl">Event Flower Exchange</h1>
-        <h3 class="font-light text-3xl">with TailwindCSS</h3>
+        <h3 class="font-light text-3xl">with Fresh Flower Everyday</h3>
     </div>
 </section>
 
