Fix_Flower_Detail_FE

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/BuyFlowerDetail.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/BuyFlowerDetail.cshtml
@@ -22,6 +22,11 @@
                     <p><strong>Origin:</strong> @Model.Flower.Origin</p>
                     <p><strong>Color:</strong> @Model.Flower.Color</p>
 
+                    <!-- Batch Information -->
+                    <h4 class="text-xl font-bold mt-6">Batch Information</h4>
+                    <p><strong>Batch Name:</strong> @Model.Flower.Batch.BatchName</p>
+                    <p><strong>Event Name:</strong> @Model.Flower.Batch.EventName</p>
+
                     <!-- Add to Cart Button -->
                     <div class="mt-6">
                         <button class="px-6 py-2 bg-blue-600 text-white font-bold rounded-full hover:bg-blue-700 transition duration-300">
@@ -34,8 +39,8 @@
                 </div>
             </div>
         </div>
-
     </div>
+
 
 
 
