Fix_FlowerDetail_ComapanyName

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/BuyFlowerDetail.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/BuyFlowerDetail.cshtml
@@ -26,6 +26,7 @@
                     <h4 class="text-xl font-bold mt-6">Batch Information</h4>
                     <p><strong>Batch Name:</strong> @Model.Flower.Batch.BatchName</p>
                     <p><strong>Event Name:</strong> @Model.Flower.Batch.EventName</p>
+                    <p><strong>Company Name:</strong> @Model.Flower.Batch.Company.CompanyName</p>
 
                     <!-- Add to Cart Button -->
                     <div class="mt-6">
