--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
@@ -33,6 +33,7 @@
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Event Name</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Event Date</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Quantity</th>
+                                                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Company</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
                                                     </tr>
@@ -45,6 +46,11 @@
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@batch.EventName</td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@batch.EventDate.ToShortDateString()</td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@batch.BatchQuantity</td>
+                                                            <td class="p-4 whitespace-nowrap">
+                                                                <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full @(batch.Status.ToLower() == "active" ? "bg-green-100 text-green-800" : "bg-red-100 text-red-800")">
+                                                                    @batch.Status
+                                                                </span>
+                                                            </td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
                                                                 @{
                                                                     var companyName = Model.Companies.FirstOrDefault(c => c.CompanyId == batch.CompanyId)?.CompanyName;
